VoteAnalyzer MultiThreaded